src/objects/Implementation_Partners__c.object
<CustomObject>
    <description>Specific roles for multiple implementation partners for a project idea.</description>
    <fields>
        <fullName>Implementation_Partner__c</fullName>
        <description>Organization responsible for specific task.</description>
        <label>Implementation Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Project Implementation</relationshipLabel>
        <relationshipName>Implementation_Partners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Implementation_Responsibility__c</fullName>
        <description>Specific role Implementation Partner plays for developing/implementing a project idea.</description>
        <label>Implementation Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Potential_Project__c</fullName>
        <label>Potential Project</label>
        <referenceTo>Project_Idea__c</referenceTo>
        <relationshipLabel>Implementation Partners</relationshipLabel>
        <relationshipName>Potential_Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Implementation Partners</label>
    <nameField>
        <displayFormat>IMP-{00000}</displayFormat>
        <label>Implementation Partners Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>